Fix syntax highlighting wrapping

--- a/assets/scss/components/_prism.scss
+++ b/assets/scss/components/_prism.scss
@@ -1,28 +1,28 @@
 /* ------------------------------------------------------------------
 ||  Prism
 ------------------------------------------------------------------- */
-code[class*="language-"],
-pre[class*="language-"] {
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  color: #90a4ae;
-  background: #fafafa;
+pre {
+  display: block;
+  margin: 24px 0;
+  padding: 1.25em 1em;
   font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
     monospace;
   font-size: $type-scale-6;
-  line-height: $leading-normal;
+  color: #90a4ae;
+  background: #fafafa;
 
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
+  overflow-x: auto;
   tab-size: 4;
+  text-align: left;
+  white-space: pre-wrap;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+}
 
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+code {
+  hyphens: manual;
+  word-break: break-word;
 }
 
 code[class*="language-"]::-moz-selection,
@@ -45,13 +45,6 @@ pre[class*="language-"] ::selection {
   white-space: normal;
   border-radius: 0.2em;
   padding: 0.1em;
-}
-
-pre[class*="language-"] {
-  overflow: auto;
-  position: relative;
-  margin: 24px 0;
-  padding: 1.25em 1em;
 }
 
 .language-css > code,
