--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -50,6 +50,8 @@ $font-family-headline: "Value Serif Pro", serif;
 $font-family-body: "Apercu Pro", system-ui, -apple-system, BlinkMacSystemFont,
   "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
   "Droid Sans", "Helvetica Neue", sans-serif;
+$font-family-mono: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
+  monospace;
 
 /* ------------------------------------------------------------------
 ||  Typography - Font Settings
